# PathAtlas

./: .cursorrules  .gitignore  README.md  pyproject.toml
backend/: README.md
backend/database/: mongodb_jobfocus.py
backend/models/: job_search_models.py
backend/notebooks/: dev_notebook.ipynb
backend/scripts/: batch_search.py  create_test_listings.py
backend/utils/: job_search.py  logger.py
backend/workflows/: job_search_workflow.py
